<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CYMBase</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Section 4</string>
    <string name="title_section5">Section 5</string>
    <string name="title_section6">Section 6</string>
    <string name="drawer_menu_section6">Section 6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Conectar</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm_password_label">Clave de Usuario</string>
    <string name="error_password_label">Clave de Usuario incorrecta</string>
    <string name="title_activity_new_user">Crear Usuario</string>
    
    <string name="label_login_newuser_titulo">Registrar nuevo Usuario</string>
    <string name="label_login_newuser_usuario">Usuario</string>
    <string name="label_login_newuser_usuario_hint">Nombre de Usuario</string>
    <string name="label_login_newuser_clave">Clave</string>
    <string name="label_login_newuser_clave_hint">Ingrese Clave</string>
    <string name="label_login_newuser_rol">Rol</string>
    <string name="label_login_newuser_rol_hint">--Seleccione--</string>
    
    <string name="label_aceptar">Aceptar</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="label_mostrar_caracteres">Mostrar caracteres</string>
    <string name="label_source_image">Cargar imagen desde ...</string>
    <string name="label_camara">Camara</string>
    <string name="label_galeria">Galeria</string>
    <string name="label_eliminar_imagen">Eliminar imagen</string>
    <string name="label_eliminar_user">Eliminar usuario</string>
    <string name="label_eliminado">Objeto eliminado</string>

</resources>
